fix: textfield row overflow

--- a/lab2/random_post_announcement_plugin/css/style.css
+++ b/lab2/random_post_announcement_plugin/css/style.css
@@ -15,3 +15,7 @@
 .remove-announcement {
     margin-left: 8px; color: red; cursor: pointer;
 }
+
+button {
+    padding: 5px 10px;
+}
